// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`es5 target: output file 1`] = `
"\\"use strict\\";Object.defineProperty(exports, \\"__esModule\\", {value: true});// input.ts
var Foo = function Foo () {};

Foo.prototype.hi = function hi () {
  var a = function () { return \\"foo\\"; };
  console.log(a());
};


exports.Foo = Foo;
"
`;

exports[`es5 target: output file list 1`] = `
Array [
  "input.js",
]
`;

exports[`minify: output file 1`] = `
"\\"use strict\\";Object.defineProperty(exports, \\"__esModule\\", {value: true});function a(){return\\"foo\\"}exports.foo = a;
"
`;

exports[`minify: output file list 1`] = `
Array [
  "input.js",
]
`;

exports[`multiple formats and pkg.type is module: output file 1`] = `
"// input.ts
const a = 1;
export {
  a
};
"
`;

exports[`multiple formats and pkg.type is module: output file list 1`] = `
Array [
  "input.cjs",
  "input.global.js",
  "input.js",
]
`;

exports[`multiple formats with legacy output: output file 1`] = `
"\\"use strict\\";Object.defineProperty(exports, \\"__esModule\\", {value: true});// input.ts
const a = 1;


exports.a = a;
"
`;

exports[`multiple formats with legacy output: output file list 1`] = `
Array [
  "input.js",
  "esm/input.js",
  "iife/input.js",
]
`;

exports[`multiple formats: output file 1`] = `
"\\"use strict\\";Object.defineProperty(exports, \\"__esModule\\", {value: true});// input.ts
const a = 1;


exports.a = a;
"
`;

exports[`multiple formats: output file list 1`] = `
Array [
  "input.global.js",
  "input.js",
  "input.mjs",
]
`;

exports[`simple: output file 1`] = `
"\\"use strict\\";Object.defineProperty(exports, \\"__esModule\\", {value: true});// foo.ts
var foo_default = \\"foo\\";

// input.ts
var input_default = foo_default;


exports.default = input_default;
"
`;

exports[`simple: output file list 1`] = `
Array [
  "input.js",
]
`;
